[package]
name = "rust-chess-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }